--- a/content/post/2017-06-28-umnar-wordpress-niech-yje-hugo.Rmd
+++ b/content/post/2017-06-28-umnar-wordpress-niech-yje-hugo.Rmd
@@ -8,9 +8,11 @@ categories:
 tags:
   - hugo
 ---
-Blogi to kiedyś były fajne miejsca gdzie można było sie sporo dowiedzieć. Pisze były, bo autorzy więcej czasu poświęcali na to co mają do powiedzenia, niż na to jak to wygląda. Z czasem te proporcje się odwróciły. Nie bez winy jest tu rozwój narzędzi do publikowania w internecie, który sprawił, że blogaska może sobie dzisiaj założyć każdy. Aplikacje i serwisy do blogowania stały się wielkimi, skomplikowanymi kombajnami gdzie błędy i dziury są bezlitośnie wykorzystywane przez hackerów. W efekcie na przykład wszyscy, ktorzy posługują się popularnym WordPressem, sporo czasu muszą poświęcać na instalowanie łatek, nowych wersji itp. czynności, ktore niewiele mają wspólnego z przelewaniem na “papier” tego co mają mądrego do powiedzenia.
+Blogi to były kiedyś fajne miejsca gdzie można było sie sporo dowiedzieć. Pisze były, bo autorzy więcej czasu poświęcali na to co mają do powiedzenia, niż na to jak to co napisali -  wygląda. Z czasem te proporcje się odwróciły. Nie bez winy jest tu rozwój narzędzi do publikowania w internecie, który sprawił, że blogaska może sobie dzisiaj założyć każdy. Aplikacje i serwisy do blogowania stały się wielkimi, skomplikowanymi kombajnami gdzie błędy i dziury są bezlitośnie wykorzystywane przez hackerów. W efekcie na przykład wszyscy, ktorzy posługują się popularnym WordPressem, sporo czasu muszą poświęcać na instalowanie łatek, nowych wersji itp. czynności, ktore niewiele mają wspólnego z "przelewaniem" na papier tego co mają mądrego do powiedzenia.
 
-Remedium miedzy innymi na te problemy są tzw. generatory stron statycznych (static website generator). Technologia znana od dawna, ale usprawniona, wykorzystująca rozwój standardów internetowych, od kilku lat zdobywa olbrzymią popularność. Takim generatorem jest właśnie Hugo na którym postawiłem tego blogaska. O tym dlaczego w dalszej części.
+Remedium, miedzy innymi, na te problemy są tzw. generatory stron statycznych (static website generator). Technologia znana od dawna, ale usprawniona i wykorzystująca rozwój standardów internetowych, od kilku lat zdobywa coraz większą  popularność. Takim generatorem jest właśnie [Hugo](http://gohugo.com) na którym postawiłem tego blogaska. A dlaczego to o tym w dalszej części.
+
+***
 
 Bloga, czy jak wolę mówić blogaska, mam ponad 10 lat. Przez cały ten okres mój stosunek do niego był zawsze taki sam: miało to być miejsce, gdzie sam, bez niczyich sugestii, mogę się wypowiadać. Mam ochotę to piszę, nie mam ochoty, to miesiącami milczę. Może nie jest to najlepsza strategia by zostać znanym “blogerę”, ale co tam.
 
@@ -32,6 +34,8 @@ WordPress to doskonałe narzędzie, ale jak każde z wiekiem, traci trochę na b
 
 Wybrałem tylko kilka z powodów, dla których postanowiłem, że czas w końcu zrobić jakąś dobrą zmianę. I tak sobie od mniej więcej dwóch lat odkładałem kiedy ta "dobra zmiana" nastapi aż tu buum: hosting na którym miałem [Dziennikarz.pl](http://dziennikarz.pl) od września przestaje działać w Polsce. No to trzeba było coś zrobić :-)
 
+---
+
 Pierwszy krok to wybór narzędzia. Jeśli nie WordPress to co? Po kilku dniach czytania i próbowania mój wybór padł na [Hugo](http://gohugo.com). 
 
 Jest to narzędzie, którego rozwój obserwuję mniej więcej od roku. Technicznie nazywa się to generator stron statycznych i na pierwszy rzut oka wydaje się być krokiem w tył w porównaniu do WordPressa. U źródeł popularności takich generatorów leży odwrotna niż w przypadku WordPressa filozofia. WordPress działa na serwerze i gdy wstukamy adres strony to, to co otrzumujemy w przeglądarce jest za każdym razem tworzone na serwerze. Pomijam tu różne cache, chodzi mi o zasadę działania. Generatory Stron Statycznych działają inaczej. Strony są wcześniej generowane i wyświetlane bezpośrednio internaucie gdy się z nią połączy. To drobna, ale z wielu punktów widzenia ważna różnica, bo dzięki niej strony stworzone przez generatory są o wiele szybsze i mniej "ważą". Są też bardziej “odporne” na dużą liczbę internautów. By się o tym przekonać wystarczy prosty test sieci w narzędziach programistycznych przeglądarki:
@@ -44,6 +48,8 @@ Drugi screen zawiera te same parametry, ale dla strony w wersji Hugo. W podsumow
 ![Strona w wersji Hugo](/img/dziennikarz-hugo.png)
 
 Po drugie nie ma logowania, systemu ról i uprawnień, bazy danych czyli wszystkiego tego, gdzie teoretycznie może się włamać zły “haker”. Generatory mają też tą zaletę, że teksty do nich pisze się w metajęzyku zwanym [Markdown](https://pl.wikipedia.org/wiki/Markdown). By go opanować, średnio inteligentna osoba, potrzebuje ok. 15 minut. W zamian możemy tworzyć teksty w uniwersalnym formacie, czyli takim, który można zamienić na praktycznie dowolny np. MS Word czy pdf. Jeden z najfajniejszych opisów tego języka znajdziecie na stronie [Daring Fireball](http://daringfireball.net/projects/markdown/).
+
+***
 
 Jeśli już wiedziałem, że będzie to Generator Stron Statycznych, to powstało pytanie: który? 
 
