--- a/content/post/2017-06-28-umnar-wordpress-niech-yje-hugo.Rmd
+++ b/content/post/2017-06-28-umnar-wordpress-niech-yje-hugo.Rmd
@@ -67,7 +67,7 @@ Dokładnie o to mi chodziło. Chcę mieć ten fan co kiedyś!
 
 Co dalej? Na razie przeniosłem posty, ale migracja wymaga dokładnego sprawdzenia. Szczególnie chodzi o zdjęcia i inne pliki graficzne oraz kilka stron np. ranking dziennikarzy na Twitterze.
 
-Ze wzgledu na czas, zastosowałem standardową skórkę. Na poczatku nie byłem z niej zadowolony, a szczególnie ze strony głównej składającej się z listy wpisów, ale z czasem... spodobał mi się taki układ. Jednak skórka wymaga kilku prac, głównie chodzi o czcionkę w której polskie znaki nie wyglądają najlepiej.
+Ze wzgledu na czas, zastosowałem standardową skórkę. Na poczatku nie byłem z niej zadowolony, a szczególnie ze strony głównej składającej się z listy wpisów, ale z czasem... spodobał mi się taki układ. Jednak skórka wymaga kilku prac, ~~głównie chodzi o czcionkę w której polskie znaki nie wyglądają najlepiej.~~
 
 Kilku znajomych prosiło mnie bym pokazał jak tworzy się bloga na Hugo, który dodatkowo - tak jak moja obecna wersja - jest na darmowym hostingu. Pewnie zamiast każdemu z osobna tłumaczyć, zrobię po prostu taki mini tutorial, tym bardziej, że mam domenę, która leży sobie odłogiem, a można by na jej przykładzie to i kilka innych rzeczy pokazać.
 
