--- a/content/post/2017-08-08-zamachlipcowy-na-twitterze-czesc-1.Rmd
+++ b/content/post/2017-08-08-zamachlipcowy-na-twitterze-czesc-1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: \#zamachlipcowy na Twitterze - cześć 1
+title: Zamach lipcowy na Twitterze - cześć 1
 author: sms
 date: '2017-08-08'
 categories: ~
